# algebraic-multigrid

./: .gitignore  CMakeLists.txt  README.md  _formulas.tex  _formulas_dark.tex  annotated.html  classAMG_1_1DirectInterpolator-members.html  classAMG_1_1DirectInterpolator.html  classAMG_1_1Grid-members.html  classAMG_1_1Grid.html  classAMG_1_1InterpolatorBase-members.html  classAMG_1_1InterpolatorBase.html  classAMG_1_1Jacobi-members.html  classAMG_1_1Jacobi.html  classAMG_1_1LinearInterpolator-members.html  classAMG_1_1LinearInterpolator.html  classAMG_1_1Multigrid-members.html  classAMG_1_1Multigrid.html  classAMG_1_1SmootherBase-members.html  classAMG_1_1SmootherBase.html  classAMG_1_1SparseGaussSeidel-members.html  classAMG_1_1SparseGaussSeidel.html  classAMG_1_1SuccessiveOverRelaxation-members.html  classAMG_1_1SuccessiveOverRelaxation.html  class_a_m_g_1_1_direct_interpolator-members.html  class_a_m_g_1_1_direct_interpolator.html  class_a_m_g_1_1_grid-members.html  class_a_m_g_1_1_grid.html  class_a_m_g_1_1_interpolator_base-members.html  class_a_m_g_1_1_interpolator_base.html  class_a_m_g_1_1_jacobi-members.html  class_a_m_g_1_1_jacobi.html  class_a_m_g_1_1_linear_interpolator-members.html  class_a_m_g_1_1_linear_interpolator.html  class_a_m_g_1_1_multigrid-members.html  class_a_m_g_1_1_multigrid.html  class_a_m_g_1_1_smoother_base-members.html  class_a_m_g_1_1_smoother_base.html  class_a_m_g_1_1_sparse_gauss_seidel-members.html  class_a_m_g_1_1_sparse_gauss_seidel.html  (+32 more)
.github/workflows/: ci.yml  cmake-single-platform-ci.yml  cmake-single-platform.yml  docs.yml  main.yml  sca.yml
callgrind/: callgrind.out.slow_smoother
cpp/: CMakeLists.txt
cpp/amg/: solver.hpp
cpp/docs/: CMakeLists.txt
cpp/include/: CMakeLists.txt
cpp/include/amg/: .problem.hpp.swp  common.hpp  grid.hpp  interpolator.hpp  multigrid.hpp  problem.hpp  smoother.hpp  solver.hpp
cpp/src/: CMakeLists.txt  grid.cpp  multigrid.cpp  smoother.cpp  solver.cpp
cpp/test/: CMakeLists.txt  testlib.cpp
docs/: CMakeLists.txt  mainpage.md
include/: CMakeLists.txt
include/amg/: CMakeLists.txt  common.hpp  grid.hpp  interpolator.hpp  multigrid.hpp  smoother.hpp
python/: CMakeLists.txt  requirements.txt
python/amg/: multigrid.py
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_c.js  functions_e.js  (+14 more)
src/: CMakeLists.txt  compat.cpp
test/: CMakeLists.txt  testlib.cpp
